--- a/main.tex
+++ b/main.tex
@@ -25,7 +25,19 @@ Your introduction goes here! Simply start writing your document and use the Reco
 
 Once you are familiar with the editor, you can find various project settings in the Overleaf menu, accessed via the button in the very top left of the editor. To view tutorials, user guides, and further documentation, please visit \href{https://www.overleaf.com/learn}{help library}, or go to our plans page to \href{https://www.overleaf.com/user/subscription/plans}{choose your plan}.
 
-\section{Some examples to get started}
+\section{Context Flow Diagram}
+
+\subsection{How to create Sections and Subsections}
+
+Simply use the section and subsection commands, as in this example document! With Overleaf, all the formatting and numbering is handled automatically according to the template you have chosen. If you are using the Visual Editor, you can also create new section and subsections via the buttons in the editor toolbar.
+
+\section{Data Flow Diagram}
+
+\subsection{How to create Sections and Subsections}
+
+Simply use the section and subsection commands, as in this example document! With Overleaf, all the formatting and numbering is handled automatically according to the template you have chosen. If you are using the Visual Editor, you can also create new section and subsections via the buttons in the editor toolbar.
+
+\section{Entity Relationship Diagram}
 
 \subsection{How to create Sections and Subsections}
 
@@ -43,7 +55,7 @@ Note that your figure will automatically be placed in the most appropriate place
 \caption{\label{fig:frog}This frog was uploaded via the file-tree menu.}
 \end{figure}
 
-\subsection{How to add Tables}
+\subsection{Data Flow Diagram}
 
 Use the table and tabular environments for basic tables --- see Table~\ref{tab:widgets}, for example. For more information, see this help article on \href{https://www.overleaf.com/learn/latex/tables}{tables}. 
 
@@ -57,7 +69,7 @@ Gadgets & 13
 \caption{\label{tab:widgets}An example table.}
 \end{table}
 
-\subsection{How to add Comments and Track Changes}
+\subsection{ER Diagram}
 
 Comments can be added to your project by highlighting some text and clicking ``Add comment'' in the top right of the editor pane. To view existing comments, click on the Review menu in the toolbar above. To respond to a comment, click on the Reply button in the lower right corner of the comment. You can close the Review pane by clicking its name on the toolbar when you are done reviewing for the time being.
 
