--- a/main.tex
+++ b/main.tex
@@ -177,32 +177,73 @@ FK & ForiegnKey\\
     \end{itemize}
 \end{itemize}
 
-\section{Data Flow Diagram}
-\subsection{Data Flow Diagram}
+\section{Level 1 Data Flow Diagram}
+\subsection{Data Flow Symbols}
 
 Use the table and tabular environments for basic tables --- see Table~\ref{tab:widgets}, for example. For more information, see this help article on \href{https://www.overleaf.com/learn/latex/tables}{tables}. 
 
-\subsection{subsection TEXT}
+\subsection{Definitions}
 
-Comments can be added to your project by highlighting some text and clicking ``Add comment'' in the top right of the editor pane. To view existing comments, click on the Review menu in the toolbar above. To respond to a comment, click on the Reply button in the lower right corner of the comment. You can close the Review pane by clicking its name on the toolbar when you are done reviewing for the time being.
-
-Track changes are available in all of our \href{https://www.overleaf.com/user/subscription/plans}{premium plans} and can be toggled on or off using the option at the top of the Review pane. Track changes allow you to keep track of every change made to the document along with the person making the change. 
-
-\subsection{How to add Lists}
-
-You can make lists with automatic numbering \dots
-
-\begin{enumerate}
-\item Like this,
-\item and like this.
-\end{enumerate}
-\dots or bullet points \dots
 \begin{itemize}
-\item Like this,
-\item and like this.
+\item Subsystem:
+    \begin{itemize}
+    \item Airline Flight Management
+    \item User Management
+    \item Booking Subsystem
+    \item Payment Processing
+    \end{itemize}
+\item Entity:
+    \begin{itemize}
+    \item Admin
+    \item Customer
+    \end{itemize}
+\item Data Storage:
+    \begin{itemize}
+    \item User Database
+    \item Flight Database
+    \item Payment Records
+    \end{itemize}
+\item Relations (optional might delete this portion):
+    \begin{itemize}
+    \item PK    PaymentID
+    \item       Amount
+    \item       Method
+    \item FK    BookingID
+    \end{itemize}
 \end{itemize}
 
-\subsection{How to write Mathematics}
+\subsection{Diagram Explanation}
+
+Optional - make a summary here of the level 1 DFD
+
+\subsection{Entities}
+\begin{itemize}
+\item Subsystem:
+    \begin{itemize}
+    \item Airline Flight Management
+    \item User Management
+    \item Booking Subsystem
+    \item Payment Processing
+    \end{itemize}
+\item Entity:
+    \begin{itemize}
+    \item Admin
+    \item Customer
+    \end{itemize}
+\item Data Storage:
+    \begin{itemize}
+    \item User Database
+    \item Flight Database
+    \item Payment Records
+    \end{itemize}
+\item Relations (optional might delete this portion):
+    \begin{itemize}
+    \item PK    PaymentID
+    \item       Amount
+    \item       Method
+    \item FK    BookingID
+    \end{itemize}
+\end{itemize}
 
 \LaTeX{} is great at typesetting mathematics. Let $X_1, X_2, \ldots, X_n$ be a sequence of independent and identically distributed random variables with $\text{E}[X_i] = \mu$ and $\text{Var}[X_i] = \sigma^2 < \infty$, and let
 \[S_n = \frac{X_1 + X_2 + \cdots + X_n}{n}
