--- a/main.tex
+++ b/main.tex
@@ -16,7 +16,6 @@
 \maketitle
 
 \begin{abstract}
-The airline booking system allows customers to efficiently manage and check flights and their flight tickets and account data. 
 The Airline Management System enables efficient handling of passenger, flight, and booking data while ensuring smooth operational throughput even during periods of high demand and numerous concurrent transactions. In addition to managing core functionalities such as flight scheduling, ticketing, and payment processing, the system also supports report generation to aid in various airline operations and decision-making processes. The system integrates a variety of automated modules to streamline workflows across departments, including reservations, customer service, and flight operations. To illustrate its functionality and design, we developed multiple visual models including context flow diagrams, data flow diagrams(Levels 1 and 2), class diagrams, entity-relationship diagrams, and use case diagrams. These models will provide a comprehensive overview of the system's architecture and behavior.
 \end{abstract}
 
@@ -94,8 +93,9 @@ Add Text
     \begin{itemize}
         \item Records in Entity A can relate to many records in Entity B, and vice versa
     \end{itemize}
-
     \end{itemize}
+\end{itemize}
+
 \begin{table}
 \centering
 \begin{tabular}{l|r}
@@ -208,6 +208,13 @@ This Data Flow Diagram correctly follows standard conventions, ensuring that all
 
 Within this diagram, we can see a well-structured breakdown of the airline booking system into four core subsystems, two external entities, and three primary data stores, all interconnected through clearly labeled data flows. These components together enable seamless airline operations including user management, flight handling, booking, and payment processing.
 
+\section{Level 2 Data Flow Diagram}
+
+\subsection{Definitions}
+
+\section{Use Case Diagram}
+
+\subsection{Definitions}
 
 \bibliographystyle{alpha}
 \bibliography{sample}
