--- a/main.tex
+++ b/main.tex
@@ -179,6 +179,14 @@ FK & ForiegnKey\\
 
 \section{Level 1 Data Flow Diagram}
 
+
+\subsection{DFD Symbols}
+\begin{figure}
+    \centering
+    \includegraphics[width=0.25\linewidth]{DFD-Basic-Symbols.jpg}
+    
+\end{figure}
+
 \subsection{Definitions}
 
 \begin{itemize}
@@ -202,7 +210,7 @@ FK & ForiegnKey\\
     \end{itemize}
 \end{itemize}
 
-\subsection{Diagram Explanation}
+\subsection{Level 1 DFD Summary}
 
 This Data Flow Diagram correctly follows standard conventions, ensuring that all data movement is clearly mapped, and all processes and storage points are logically connected. The interactions between the Customer/Admin and the internal subsystems are carefully defined to reflect real-world airline operations, providing a clear visualization of the system's functional structure.
 
