--- a/main.tex
+++ b/main.tex
@@ -175,6 +175,10 @@ FK & ForiegnKey\\
 
 \section{Level 1 Data Flow Diagram}
 
+\subsection{Digram Symbols}
+
+\includegraphics[scale=0.5]{image.png}
+
 \subsection{Definitions}
 
 \begin{itemize}
